added list of events on item detail

--- a/src/main/resources/templates/item-detail.html
+++ b/src/main/resources/templates/item-detail.html
@@ -23,6 +23,14 @@
         </tr>
         </tbody>
     </table>
+
+    <table>
+        <tr th:object="${item}">
+        <tr th:each="events : ${item.events}">
+            <td th:text="${events.name}"></td>
+        </tr>
+    </table>
 </div>
+
 </body>
 </html>
