--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,6 +27,7 @@
             <td><img th:src="${'data:image/jpg;base64,'+items.imageToShow}" width="150" height="100" /></td>
             <td th:text="${items.name}"></td>
             <td th:text="${items.registerDate}"></td>
+            <td th:text="${items.state}"></td>
             <td><a th:href="@{/itemDetail/{id}(id=${items.itemId})}">Edit</a></td>
         </tr>
         </tbody>
