--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,7 +19,8 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="item : ${items.content}" style="cursor: pointer">
+        <tr th:each="item : ${items.content}" style="cursor: pointer" th:class="${T(com.inventory.util.StateTableConverter).convertStateToClass(item.state)}"
+                th:onclick="'javascript:rowClicked(\'' + ${item.itemId} + '\');'">
             <td><img th:src="${'data:image/jpg;base64,'+item.imageToShow}" width="100" height="100"/></td>
             <td th:text="${item.name}"></td>
             <td th:text="${item.registerDate}"></td>
@@ -38,6 +39,12 @@
             </li>
         </ul>
     </div>
+
+    <script>
+        function rowClicked(value) {
+            location.href = "/itemDetail/" + value;
+        }
+    </script>
 
     <div th:replace="fragments/footer :: footer">&copy;2019 Footer</div>
 </div>
